--- a/AKIGangstaNews/Source/UI/AKIViewControllers/AKINewsViewController/AKINewsViewCell/AKINewsViewCell.xib
+++ b/AKIGangstaNews/Source/UI/AKIViewControllers/AKINewsViewController/AKINewsViewCell/AKINewsViewCell.xib
@@ -15,39 +15,37 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logonews" translatesAutoresizingMaskIntoConstraints="NO" id="LN5-Au-pD1">
-                        <rect key="frame" x="0.0" y="-1" width="58" height="46"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="58" id="LiZ-Yw-zj5"/>
-                        </constraints>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="FxR-k5-EXO">
-                        <rect key="frame" x="59" y="-3" width="261" height="46"/>
+                        <rect key="frame" x="74" y="-3" width="246" height="46"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="246" id="EUP-Md-H2z"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AFn-tZ-a0L" customClass="AKIImageView" customModule="AKIGangstaNews" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="66" height="44"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="FxR-k5-EXO" firstAttribute="leading" secondItem="LN5-Au-pD1" secondAttribute="trailing" constant="1" id="HKa-Yp-XOB"/>
-                    <constraint firstAttribute="trailing" secondItem="FxR-k5-EXO" secondAttribute="trailing" id="JfR-os-W04"/>
-                    <constraint firstItem="LN5-Au-pD1" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="aSY-70-bgJ"/>
-                    <constraint firstItem="FxR-k5-EXO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-11" id="iTi-YF-sva"/>
-                    <constraint firstAttribute="bottom" secondItem="FxR-k5-EXO" secondAttribute="bottom" id="mPF-dL-8dh"/>
-                    <constraint firstItem="LN5-Au-pD1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-9" id="ojJ-5b-29z"/>
-                    <constraint firstItem="LN5-Au-pD1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="uQT-84-uFW"/>
+                    <constraint firstItem="FxR-k5-EXO" firstAttribute="leading" secondItem="AFn-tZ-a0L" secondAttribute="trailing" constant="8" symbolic="YES" id="IjP-bO-h5y"/>
+                    <constraint firstItem="AFn-tZ-a0L" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Kzt-Nj-cN5"/>
+                    <constraint firstAttribute="bottom" secondItem="FxR-k5-EXO" secondAttribute="bottom" id="dmF-67-mCN"/>
+                    <constraint firstItem="AFn-tZ-a0L" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="i8c-yt-s55"/>
+                    <constraint firstAttribute="trailing" secondItem="FxR-k5-EXO" secondAttribute="trailing" id="ojg-UB-37C"/>
+                    <constraint firstItem="FxR-k5-EXO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-11" id="tZF-of-LbI"/>
+                    <constraint firstItem="AFn-tZ-a0L" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="uo4-42-mSl"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="headerLabel" destination="FxR-k5-EXO" id="Yup-nK-uy4"/>
-                <outlet property="logoImage" destination="LN5-Au-pD1" id="4Hu-Fy-Vf1"/>
+                <outlet property="newsImageView" destination="AFn-tZ-a0L" id="bgQ-n6-pDH"/>
             </connections>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="logonews" width="184" height="184"/>
-    </resources>
 </document>
